# wami

./: .npmignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  WAMI_CONFIG.md  index.html  package-lock.json  package.json  test-all-python.ts  test-python.ts  test-workspace.ts  tsconfig.json
fixtures/test-many-scripts/: package.json
fixtures/test-monorepo/: package.json
fixtures/test-python-pip/: requirements.txt
fixtures/test-python-pipenv/: Pipfile
fixtures/test-python-poetry/: pyproject.toml
fixtures/test-python-uv/: .wai.json  pyproject.toml
src/: app.tsx  cli.tsx
src/components/: ArgumentInput.tsx  CommandEditor.tsx  CustomCommandInput.tsx  ErrorMessage.tsx  Header.tsx  ProjectSwitcher.tsx  ScriptList.tsx
src/core/: detector.ts  nodejs-detector.ts  python-detector.ts  registry.ts
src/core/go/: detector.ts
src/core/node/: detector.ts  package-managers.ts
src/core/python/: detector.ts  parser-registry.ts  poe-parser.ts  task-parser.ts  task-runner-registry.ts  tool-detector.ts  tool-registry.ts
src/core/python/interfaces/: task-parser.ts  tool.ts
src/core/python/tools/: bandit.ts  black.ts  coverage.ts  flake8.ts  isort.ts  mypy.ts  poe.ts  pre-commit.ts  pylint.ts  pyright.ts  pytest.ts  ruff.ts  sphinx.ts
src/types/: index.ts
src/utils/: command.ts  config.ts  fs.ts  history.ts
